# malt_wrcad

./: .clang-format  .clang-format-ignore  .gitignore  .vimrc  BUGS  CMakeLists.txt  LICENSE  Makefile  README  README.md  call_spice.c  call_spice.h  config.c  config.h  corners.c  corners.h  define.c  define.h  gplot.c  gplot.h  list.c  list.h  malt.c  malt.h  marg_opt_yield.c  marg_opt_yield.h  margins.c  margins.h  numerical.c  numerical.h  optimize.c  optimize.h  space.c  space.h  stat_math.c  stat_math.h  unmatched-alloc.pl  unmatched_alloc.pl
DOC/: Malt3.docx
EXAMP/: .gitignore
EXAMP/AA_fluxshut_top_4malt/: .malt.binsearch  .malt.passfail  .malt.run  define.call  malt.config  netlist.2.config  netlist.3.param  netlist.5.passf  netlist.config  netlist.config.d  netlist.d  netlist.envelope  netlist.envelope.  netlist.nom  netlist.nominals  netlist.plot.d
EXAMP/AA_fluxshut_top_4malt_clean/: netlist.2.config  netlist.cir  netlist.config
EXAMP/fluxshut/: Malt.toml  my_models.lib  netlist.1.config  netlist.3.config  netlist.4.config  netlist.5.config  netlist.cir  netlist.run  netlist.toml
EXAMP/fluxshut/netlist/: ex1.toml  ex2.toml  ex3.toml  ex4.toml
scripts/: maltcfg2toml
